[package]
name = "mpw"
version = "0.1.0"
edition = "2024"

[dependencies]
rusterpassword = { git = "https://codeberg.org/valpackett/rusterpassword" }
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
secstr = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2.3.2"
rpassword = "7.0"
regex = "1.0"
arboard = "3.0"
webbrowser = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
